--- a/book.bib
+++ b/book.bib
@@ -762,6 +762,15 @@
   note = {Retrieved May 25 2018, from \url{http://www.emgo.nl/kc/}}
 }
 
+@article{Hartigan1979,
+  author = {Hartigan, A. and Wong, M. A.},
+  doi = {10.2307/2346830},
+  journal = {Journal of the Royal Statistical Society},
+  title = {{A K-Means Clustering Algorithm}},
+  year = {1979}
+}
+
+
 @article{heron2010,
   title={Ecological momentary interventions: incorporating mobile technology into psychosocial and health behaviour treatments},
   author={Heron, Kristin E and Smyth, Joshua M},
