--- a/datamanagement.Rmd
+++ b/datamanagement.Rmd
@@ -137,7 +137,7 @@ In the example project, unprocessed data files exported from the three data
 collection systems (i.e., survey data, EMA data, and actigraphy data) are stored in
 the 'data/raw"-directory', in separate sub-directories per data type.
 
-In 'data/raw/survey', we find two files: 1) 'sur_t0_2018_06_10.csv',
+In 'data/raw/surveys', we find two files: 1) 'sur_t0_2018_06_10.csv',
 containing the results of the demographic questionnaire and the PHQ-9 pre-test,
 and 2) 'sur_t1_2018_06_10.csv', containing the results of the PHQ-9
 post-test. In exports of such survey systems, data from all participants are
@@ -207,7 +207,7 @@ the final analyses.
 
 ```{r dm-clean-example-script, eval = FALSE}
 # ------------------------------------------------------------
-# Clean data 
+# Clean survey data 
 # JR - 2018-10-16
 # ------------------------------------------------------------
 
@@ -216,6 +216,8 @@ t0 <- read.csv("data/raw/surveys/sur_t0_2018_06_10.csv")
 
 # inject study ID, from study key file -----------------------
 keys <- read.csv("data/raw/key_file.csv")
+
+names(t0)[1] <- "Survey_ID"
 t0 <- merge(t0, keys)
 
 # only keep variables of interest ----------------------------
@@ -260,11 +262,11 @@ cleaned baseline data:
 
 ```{r dm-preprocess-example-script, eval = FALSE}
 # ------------------------------------------------------------
-# Pre-process data 
+# Pre-process survey data 
 # JR - 2018-10-16
 # ------------------------------------------------------------
 
-# import cleaned baseline survey data ------------------------
+# import cleaned survey data ------------------------
 load("data/cleaned/t0.Rda")
 load("data/cleaned/t1.Rda")
 
@@ -274,7 +276,7 @@ t1$phq9 <- rowSums(t1[paste0("phq", 1:9)], na.rm = TRUE)
 
 # re-save baseline data --------------------------------------
 save(t0, file = "data/cleaned/t0.Rda")
-save(t0, file = "data/cleaned/t1.Rda")
+save(t1, file = "data/cleaned/t1.Rda")
 ```
 
 
@@ -319,7 +321,6 @@ journal), and the regression results are saved in a standard R data structure.
 ```{r dm-analysis-example, eval = FALSE}
 # -------------------------------------------------------------
 # N = 1 Analysis (P001)
-# note: part of manuscript!
 # JR - 2018-10-16
 # -------------------------------------------------------------
 
@@ -348,7 +349,7 @@ errors are normally distributed. When the regression results are saved to disk,
 the following three lines are all you need to satisfy their request:
 
 ```{r dm-revisit-lm, eval = FALSE}
-# Revisiting regression results, for a visual regression residual check  
+# Revisiting regression results, for a visual regression residuals check  
 load("scripts/published/P001_regression.Rda")
 
 pdf(file = "scripts/publised/residual_plot.pdf")
@@ -402,5 +403,5 @@ example that we discussed.
 If you want to learn more about data management with R and RStudio, the book
 *"Reproducible Research with R and RStudio"* [@gandrud2015] would be a good
 place to start. You may also be informed by the data management techniques that
-are described in the first two chapters of the book *"Using Rand RStudio for
+are described in the first two chapters of the book *"Using R and RStudio for
 Data Management, Statistical Analysis, and Graphics"* [@horton2015].
