fix header level

--- a/features.Rmd
+++ b/features.Rmd
@@ -249,7 +249,7 @@ acf(e$s, type = "partial", lag.max = 35, main = "", ylab = "corr", xlab = "lag")
 par(op)
 ```
 
-### Rolling Statistics
+## Rolling Statistics
 
 From the auto-correlation analysis, we learned that describing the EMA series as
 a simple trend might be too simplistic. The mean does not increase in a simple
