--- a/features.Rmd
+++ b/features.Rmd
@@ -81,7 +81,7 @@ day, however, the estimated SD is
 the additional variability introduced by the trend is cancelled out, our
 estimate of variability decreases considerably. 
 
-```{r feat-plot-mean, echo = FALSE, out.width = "100%", fig.asp = .5, fig.cap = "EMA time-series, with reference lines for the mean (red line) and the mean +/- 1 standard deviation range (the area between the two blue lines). Both statistics are informative, but obviously do not do full justice to the variation in observations over time."}
+```{r feat-plot-mean, echo = FALSE, out.width = "100%", fig.asp = .3, fig.cap = "EMA time-series, with reference lines for the mean (red line) and the mean +/- 1 standard deviation range (the area between the two blue lines). Both statistics are informative, but obviously do not do full justice to the variation in observations over time."}
 # plot signal with mean and variance
 e <- subset(d, !is.na(s))
 ggplot(e, aes(x = t, y = s)) +
@@ -109,12 +109,9 @@ the dynamics of the series with two numbers. As can be seen in Figure
 informative summary. At the start, the estimated mean - the intercept - is
 `r round(coef(fm)[1], 1)`. This mean increases approximately
 `r round(coef(fm)[2] * 7,  1)` points per week (the slope), to a final estimated
-mean of `r round(coef(fm)[1], 1) + round(coef(fm)[2] * 21, 1)`. Comparing Figure
-\@ref(fig:feat-plot-mean) and Figure \@ref(fig:feat-plot-lm), we see that Figure
-\@ref(fig:feat-plot-lm) is more successful in capturing the variation in the
-series.
+mean of `r round(coef(fm)[1], 1) + round(coef(fm)[2] * 21, 1)`. If you visually compare the red regression line in Figure \@ref(fig:feat-plot-lm) with the red line for the mean in \@ref(fig:feat-plot-mean), it is clear the regression line provides a much better summary.
 
-```{r feat-plot-lm, echo = FALSE, out.width = "100%", fig.asp = .3, fig.cap = "EMA time-series, with a regression reference line (red) and the residual error SD range around this line (the area between the two blue lines)"}
+```{r feat-plot-lm, echo = FALSE, out.width = "100%", fig.asp = .3, fig.cap = "EMA time-series, with a regression reference line (red) and the residual error SD range around this line (the area between the two blue lines)."}
 ggplot(e, aes(x = t, y = s)) +
   geom_smooth(method = "lm", color = "red", se = FALSE) +
   geom_abline(intercept = coef(fm)[1] + sd(resid(fm)), slope = coef(fm)[2], color = "blue", linetype = 2) + 
@@ -320,7 +317,9 @@ In this chapter, we used a number of statistical indicators to characterize a
 single time-series. By extracting these indicators (or "features"), we
 identified several regularities. We learned that the mean, variance and
 missingness increased over time, and we identified clear signs of circadian
-rhythmicity. You might have identified some of these features when you first
+rhythmicity. 
+
+You might have identified some of the features when you first
 inspected Figure \@ref(fig:feat-plot). The increase in the mean was pretty easy
 to spot. However, the systematic increases in the variance and the missingness
 were less clear. Likewise, although you might have spotted the periodicity in
@@ -342,22 +341,20 @@ you learn how to apply the feature extraction techniques yourself.
 \index{Simulating data} 
 
 ```{r feat-allcode, echo = TRUE, eval = FALSE}
-## (De)constructing a simulated EMA time-series
+# (De)constructing a simulated EMA time-series ------------
 
-# libraries ----------------
+# libraries -----------------------------------------------
 library(ggplot2)
 library(gridExtra)
 library(psych)
 library(zoo)
 library(emaph)
 
-# simulate the signal (using emaph function) -------
+# simulate the signal (using emaph function) --------------
 d <- generate_features_dataset(seed = 123)
 
-# plot -------------------------
+# plot ----------------------------------------------------
 e <- subset(d,!is.na(s))
-
-# raw series 
 ggplot(e, aes(x = t, y = s)) +
   geom_line() +
   geom_point() +
@@ -366,32 +363,34 @@ ggplot(e, aes(x = t, y = s)) +
   theme_bw() + theme(panel.grid.minor = element_blank())
 
 
-# plot mean and variance --------
+# plot, with mean and variance ----------------------------
 ggplot(e, aes(x = t, y = s)) +
-  geom_hline(yintercept = mean(e$s, na.rm = TRUE), color = "red") +
+  geom_hline(yintercept = mean(e$s, na.rm = TRUE), 
+             color = "red") +
   geom_hline(
-    yintercept = mean(e$s, na.rm = TRUE) + sd(e$s, na.rm = TRUE),
+    yintercept = mean(e$s, na.rm = TRUE) + sd(e$s, 
+                                              na.rm = TRUE),
     color = "blue",
     linetype = 2
   ) +
   geom_hline(
-    yintercept = mean(e$s, na.rm = TRUE) - sd(e$s, na.rm = TRUE),
+    yintercept = mean(e$s, na.rm = TRUE) - sd(e$s, 
+                                              na.rm = TRUE),
     color = "blue",
     linetype = 2
   ) +
-  #geom_line() +
   geom_point() +
   ylab("mood") + xlab("days") +
   ylim(0, 10) +
   theme_bw() + theme(panel.grid.minor = element_blank())
 
 
-## The trends ---------------------
+# The trends ----------------------------------------------
 
-## run a linear regression of mood ratings by time
+# run a linear regression of mood ratings by time
 fm = lm(s ~ t, e)
 
-## mean
+# mean
 ggplot(e, aes(x = t, y = s)) +
   geom_smooth(method = "lm", color = "red", se = FALSE) +
   geom_abline(
@@ -412,7 +411,7 @@ ggplot(e, aes(x = t, y = s)) +
   theme_bw() + theme(panel.grid.minor = element_blank())
 
 
-## residuals
+# residuals
 e$residuals <- rstandard(fm)
 e$week <- (e$t %/% 1) + 1
 
@@ -423,8 +422,7 @@ ggplot(subset(e, week < 20), aes(x = t, y = abs(residuals))) +
   theme_bw() + theme(panel.grid.minor = element_blank())
 
 
-# Missing values ----------------------
-
+# Missing values ------------------------------------------
 d$t_g <- cut(t, 21, labels = 1:21)
 p <- prop.table(table(d$t_g, is.na(d$s)), 1)
 p <- as.data.frame(p)
@@ -439,7 +437,7 @@ ggplot(p, aes(x = as.numeric(Var1), y = Freq * 100)) +
   theme_bw() + theme(panel.grid.minor = element_blank())
 
 
-## imputation through interpolation
+# imputation through interpolation
 impute_interpolation <- function(x) {
   require(zoo)
   
@@ -457,7 +455,6 @@ impute_interpolation <- function(x) {
   y_
 }
 
-
 d$s_imputed <- impute_interpolation(d$s)
 ggplot(d, aes(x = t, y = s_imputed)) +
   geom_line(color = 1) +
@@ -467,14 +464,14 @@ ggplot(d, aes(x = t, y = s_imputed)) +
   theme_bw() + theme(panel.grid.minor = element_blank())
 
 
-# Autocorrelation ---------------------------
+# Autocorrelation -----------------------------------------
 acf(e$s,
     type = "partial",
     lag.max = 35,
     main = "")
 
 
-# Rolling mean ------------------------------
+# Rolling mean --------------------------------------------
 d$rolling_mean <-
   as.numeric(
     zoo::rollapply(
@@ -497,11 +494,11 @@ ggplot(e, aes(x = t, y = rolling_mean)) +
   theme_bw() + theme(panel.grid.minor = element_blank())
 
 
-# Frequency analysis --------------------------
-
+# Frequency analysis --------------------------------------
 fa <-
   spec.pgram(
-    ts(impute_interpolation(d$s), frequency = n_measurements_per_day),
+    ts(impute_interpolation(d$s), 
+       frequency = n_measurements_per_day),
     detrend = TRUE,
     demean = TRUE,
     main = "periodogram",
